load("@gazelle//:def.bzl", "gazelle_binary")

# Builds a gazelle binary linking the typescript plugin. Smoke-tests
# cross-compiling gazelle_ts to darwin from any host:
#
#   bazel build --platforms=@rules_rs//rs/platforms:aarch64-apple-darwin //:gazelle_bin
#   bazel build --platforms=@rules_rs//rs/platforms:x86_64-apple-darwin  //:gazelle_bin
#
# Catches any future regression in the macOS rust toolchain's `@macos_sdk`
# repo visibility from `@@gazelle_ts+` — analysis fails before linking is
# ever attempted, which is what `--nobuild` exercises in CI on Linux runners.
gazelle_binary(
    name = "gazelle_bin",
    languages = ["@gazelle_ts//ts"],
    visibility = ["//visibility:public"],
)
