module(
    name = "custom_extractor_example",
    version = "0.0.0",
)

bazel_dep(name = "gazelle", version = "0.50.0")
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "aspect_rules_js", version = "3.0.3")
bazel_dep(name = "aspect_rules_ts", version = "3.8.8")
bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")
bazel_dep(name = "rules_nodejs", version = "6.7.4")

bazel_dep(name = "gazelle_ts", version = "0.0.0")
local_path_override(
    module_name = "gazelle_ts",
    path = "../..",
)

# Demonstrates the `repositories` override on the import_extractor extension —
# point at a custom URL + integrity for each (version, platform) pair instead
# of the built-in IMPORT_EXTRACTOR_VERSIONS map. Useful for:
#   - mirroring the binary on an internal CDN behind a corporate firewall,
#   - shipping a fork or pre-release with no released GH artifact yet,
#   - pinning an integrity hash you've audited yourself.
#
# The keys are "<version>.<platform>"; values are [url, sha256_hex]. URLs
# below happen to point at the public GH release so this example actually
# works end-to-end — swap the host for your own to verify the override path.
import_extractor = use_extension("@gazelle_ts//import_extractor:extensions.bzl", "import_extractor")
import_extractor.toolchain(
    version = "0.1.1",
    repositories = {
        "0.1.1.darwin-arm64": [
            "https://github.com/hermeticbuild/gazelle_ts/releases/download/import_extractor_v0.1.1/import_extractor-darwin-arm64",
            "c22df4be91126f2739bf1f1cba55bd922eaa6ded78d8a5d40aa8728cbd5c9fb7",
        ],
        "0.1.1.linux-x64": [
            "https://github.com/hermeticbuild/gazelle_ts/releases/download/import_extractor_v0.1.1/import_extractor-linux-x64",
            "74954c35702d251baf8e8f317390b33a0245f53e4c973f4347022198927ea4af",
        ],
    },
)
use_repo(import_extractor, "import_extractor")

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node", dev_dependency = True)
node.toolchain(node_version = "22.11.0")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)
npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)
use_repo(npm, "npm")

rules_ts_ext = use_extension("@aspect_rules_ts//ts:extensions.bzl", "ext", dev_dependency = True)
rules_ts_ext.deps()
use_repo(rules_ts_ext, "npm_typescript")
