load("@rules_go//proto:def.bzl", "go_proto_library")

# Go bindings for the import-extractor wire protocol. The proto_library lives
# in //crates/import-extractor; we just generate Go from it here so the
# gazelle plugin (a Go program) can encode/decode frames.
go_proto_library(
    name = "import_extractor_go_proto",
    importpath = "github.com/hermeticbuild/gazelle_plugins/gazelle_ts_plugin/proto",
    proto = "//crates/import-extractor:import_extractor_proto",
    visibility = ["//gazelle_ts_plugin:__subpackages__"],
)
